# simple-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
by-actix/: Cargo.toml
by-actix/src/: main.rs  route.rs  service.rs  view.rs
by-rocket/: Cargo.toml
by-rocket/src/: main.rs  route.rs  service.rs  view.rs
server-info/: Cargo.toml
server-info/resource/: ecs_meta.json
server-info/src/: basic_info.rs  ecs_info.rs  lib.rs
