[package]
name = "by-actix"
version = "0.1.0"
authors = ["KentarouSuzuki <kentarou140@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
actix-web = "2.0"
actix-rt = "1.1"
serde = { version = "1.0", features = ["derive"] }
server-info = {path = "../server-info"}
