[package]
name = "server-info"
version = "0.1.0"
authors = ["KentarouSuzuki <kentarou140@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "^0.1"
chrono = "0.4"
local-ip = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"